<resources>
    <string name="app_name">Medicare Pro</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="start">Open</string>
    <string name="close">Close</string>

    <!--privacy policy text-->
    <string name="first_heading"><b>Privacy Policy for Medicare Pro</b>\nAt Medicare Pro, one of our main priorities is the privacy of our visitors.This Privacy Policy document contains types of information that is collected and recorded by Medicare Pro and how we use it.If you have additional questions or require more information about our Privacy Policy, do not hesitate to contact us.</string>
    <string name="second_heading"><b>\nLog Files</b>\nMedicare Pro follows a standard procedure of using log files. These files log visitors when they use app. The information collected by log files include internet protocol (IP) addresses, browser type, Internet Service Provider (ISP), date and time stamp, referring/exit pages, and possibly the number of clicks. These are not linked to any information that is personally identifiable. The purpose of the information is for analyzing trends, administering the app, tracking users\' movement on the app, and gathering demographic information.</string>
    <string name="third_heading"><b>\nPrivacy Policies</b>\nYou may consult this list to find the Privacy Policy for each of the advertising partners of Medicare Pro. Third-party ad servers or ad networks uses technologies like cookies, JavaScript, or Beacons that are used in their respective advertisements and links that appear on Medicare Pro. They automatically receive your IP address when this occurs. These technologies are used to measure the effectiveness of their advertising campaigns and/or to personalize the advertising content that you see on this app or other apps or websites. Note that Medicare Pro has no access to or control over these cookies that are used by third-party advertisers.</string>
    <string name="fourth_heading"><b>\nThird Party Privacy Policies</b>\nMedicare Pro\'s Privacy Policy does not apply to other advertisers or websites. Thus, we are advising you to consult the respective Privacy Policies of these third-party ad servers for more detailed information. It may include their practices and instructions about how to opt-out of certain options.</string>
    <string name="fifth_heading"><b>\nChildren\'s Information</b>\nAnother part of our priority is adding protection for children while using the internet. We encourage parents and guardians to observe, participate in, and/or monitor and guide their online activity. Trodev does not knowingly collect any Personal Identifiable Information from children under the age of 13. If you think that your child provided this kind of information on our App, we strongly encourage you to contact us immediately and we will do our best efforts to promptly remove such information from our records.</string>
    <string name="sixth_heading"><b>\nConsent</b>\nBy using our app, you hereby consent to our Privacy Policy and agree to its Terms and Conditions.</string>


</resources>